2010-03-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add CardiacToolbox/scinrrd_rv_crescent_tips.m:

	- Extract the tips of the crescent-shaped curve in all slices of
	the Right Ventricle.

	* Add CardiacToolbox/is_lv_on_the_left.m:

	- Check whether the left ventricle is on the left hand side of the
	image.

	* Add CardiacToolbox subdirectory for functions that are specific
	to cardiac image processing.

	* Add ThirdPartyToolbox/dijkstra.m,
	ThirdPartyToolbox/dijkstra.cpp, ThirdPartyToolbox/fibheap.h:

	- DIJKSTRA Shortests path tree from sparse matrix graph.

	* Add ThirdPartyToolbox/LICENCE

	- To explan licence difference of files in this subdirectory.

	* Add ThirdPartyToolbox directory for derivative works or third
	party functions that cannot be covered by the GPL used elsewhere
	in Gerardus, or code with an uncertain licence status.

	* FiltersToolbox/img_adjacency_distance.m:

	- Add Matlab implementation of the function, to compare with the
	MEX implementation.

2010-03-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/img_adjacency_distance.cpp,
	FiltersToolbox/img_adjacency_distance.m:

	- Convert image to adjacency-distance list in sparse matrix form.

	* Add PointsToolbox/sparse_breakdown.cpp,
	PointsToolbox/sparse_breakdown.m:

	- Extract internal arrays from sparse matrix.

2010-03-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_gradients.m:

	- Compute 1st and 2nd order image gradients.

2010-03-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_centroids.m:

	- Instead of skipping them, make [NaN NaN NaN] centroid for empty
	slices too. This way, it's easier to use them in other functions
	that iterate all the slices in a volume.

	* Add FiltersToolbox/scinrrd_centroids.m:

	- Compute centroid of every slice with segmented pixels.

2010-03-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/extmat2rotmat.m, PointsToolbox/rotmat2extmat.m:
